--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "start:prod": "tsc && node ./swagger.js && node ./dist/index.js",
     "start": "ts-node src/index.ts",
     "dev": "nodemon --watch \"./src/**\" --ext \"ts,js\" --ignore \"src/**/*.spec.ts,src/**/*.json\" --exec \"ts-node src/index.ts\"",
     "test": "jest",
@@ -20,6 +21,7 @@
     "@types/jsonwebtoken": "8.5.8",
     "@types/node": "16.11.31",
     "@types/supertest": "2.0.11",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "5.3.1",
     "@typescript-eslint/parser": "5.3.1",
     "eslint": "7.32.0",
@@ -42,6 +44,8 @@
     "express-async-errors": "3.1.1",
     "joi": "17.6.0",
     "jsonwebtoken": "8.5.1",
-    "mysql2": "2.3.0"
+    "mysql2": "2.3.0",
+    "swagger-autogen": "^2.23.1",
+    "swagger-ui-express": "^4.6.1"
   }
 }
