config railway deploy

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-MYSQL_USER=root
-MYSQL_PASSWORD=password
-MYSQL_HOST=localhost
-JWT_SECRET=secret
+PORT=xxxxx
+MYSQLPORT=xxxxx
+MYSQLUSER=xxxxx
+MYSQLPASSWORD=xxxxx
+MYSQLHOST=xxxxx
+MYSQLDATABASE=xxxxx
+JWT_SECRET=xxxxx
