--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start:prod": "tsc && node ./swagger.js && node ./dist/index.js",
-    "start": "ts-node src/index.ts",
+    "start": "tsc && node ./swagger.js && tsc && node ./dist/index.js",
     "dev": "nodemon --watch \"./src/**\" --ext \"ts,js\" --ignore \"src/**/*.spec.ts,src/**/*.json\" --exec \"ts-node src/index.ts\"",
     "test": "jest",
     "posttest": "ts-node tests/recreateDatabase.ts",
