--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "tsc && node ./swagger.js && tsc && node ./dist/index.js",
+    "start": "tsc && node ./swagger.js && tsc && npm run db && node ./dist/index.js",
+    "db": "node ./dist/models/db.js",
     "dev": "nodemon --watch \"./src/**\" --ext \"ts,js\" --ignore \"src/**/*.spec.ts,src/**/*.json\" --exec \"ts-node src/index.ts\"",
     "test": "jest",
     "posttest": "ts-node tests/recreateDatabase.ts",
