--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "27.0.2",
     "@types/jsonwebtoken": "8.5.8",
     "@types/node": "16.11.31",
+    "@types/pg": "^8.6.6",
     "@types/supertest": "2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "5.3.1",
